# Kael-OS

./: .gitattributes  .gitignore  00_START_HERE.md  ANDROID_PLAN.md  App.tsx  BETA_RELEASE_SUMMARY.md  CLEANUP_SUMMARY.md  CLOUD_CODE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_VISUAL_SUMMARY.md  DEVELOPMENT_STATUS.md  DISCORD_SETUP_GUIDE.md  DOCS_INDEX.md  DOCUMENTATION_AUDIT.md  DRAGON_ICON_PROMPT.txt  FIREBASE_SETUP.md  LAUNCH_ANNOUNCEMENT.md  MANIFEST.md  OAUTH_SETUP_COMPLETE.md  PKGBUILD  PROJECT_STATUS.md  PROVIDER_ICONS_UPDATE.md  QUICK_REFERENCE.md  QUICK_TEST_COMMANDS.md  README.md  README_OAUTH.md  RECENT_IMPROVEMENTS.md  RELEASE_v0.5.0.md  SELF_CONTAINED_BUILD.md  SESSION_COMPLETE.md  SESSION_COMPLETION_REPORT.md  SETUP.md  UPDATE_SERVER_CPANEL.md  WELCOME.md  basic.ts  constants.ts  create_icons.py  deploy-firestore-rules.sh  docs.html  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_scaffold.rs  auth.rs  commands.rs  llm.rs  main.rs  oauth_server.rs  state.rs  version.rs  webview_oauth.rs
src-tauri/src/commands/: theme_installer.rs
src-tauri/src/components/: api_key_manager.rs  app.rs  app_simple.rs  app_tracker.rs  chat.rs  gpu_status.rs  header.rs  icons.rs  login.rs  mod.rs  oauth_modal.rs  settings.rs  system_info.rs  terminal.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/firebase/: mod.rs  uploader.rs
src-tauri/src/github/: mod.rs  uploader.rs
src-tauri/src/gpg/: mod.rs
src-tauri/src/kael/: mod.rs
src-tauri/src/services/: gpg_backup.rs  (+7 more)
(+214 files in other folders)
